<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yumm</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="placeText" />
    <string name="locationButton" />
    <string name="variousText" />
    <string name="searchButton">Sök</string>
    <string name="alphaSort">name A-Z</string>
    <string name="ratingSort">rating</string>
    <string name="closestSort">närmast</string>
    <string name="placesTop">Hitta Restauranger nära</string>
    <string name="kitchenTop">Vad är du sugen på? (valfritt)</string>
    <string name="placesApiKey">AIzaSyCo9Aepp27_I_H-EgbxGl2zBumVYM3bNFU</string>
	<string name="imageDesc">restaurant logo</string>
    <!-- might be debug key -->
    <string name="mapsApiKey">0LlITXNysSKElLxvZs8UTEo_RX0Qtze5pxVkI3w</string>

    <string-array name="KitchenArray">
        <item>Turkisk</item>
        <item>Kurdisk</item>
        <item>Jamaicanskt</item>
        <item>Svenskt</item>
        <item>Kinesiskt</item>
        <item>Japanskt</item>
    </string-array>

    <string name="title_activity_start">Yumm</string>
    <string name="username">bob@bob.bob</string>
    <string name="password">bob</string>
    <string name="image1">image frontpage</string>
    <string name="title1">Hem</string>
	<string name="title2">Lista</string>
	<string name="title3">Karta</string>
	<string name="title4">Beställningar</string>
	<string name="title5">Favoriter</string>
	<string name="title6">Min Profil</string>
	<string name="title7">Om Yumm</string>
	<string name="title8">Logga Ut</string>
</resources>